--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,37 @@
     width: 100%;
     background-color: cadetblue;
 }
+
+
+#fondo{
+    background: url(../img/fondo.png) no-repeat;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#handdealer{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    margin: 10px;
+    clear: both;
+}
+
+#handuser{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    margin: 10px;
+    margin-top: 200px;
+    clear: both;
+}
+
+#control-desition{
+    float: right;
+    margin: 10px auto;
+    padding: 10px;
+    
+}
